--- a/catalog.html
+++ b/catalog.html
@@ -239,8 +239,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/2.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/2.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Уровень 1 Влагоотводящий
@@ -253,8 +254,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/5.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/3.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Аксессуары
@@ -267,8 +269,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/6.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/4.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Уровень 1 Влагоотводящий
@@ -281,8 +284,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/1.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/5.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Уровень 1 Влагоотводящий
@@ -295,90 +299,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/2.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/6.png);">
 									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">
-									Аксессуары
-								</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item discount">
-								<div class="products-slider__preview" style="background-image: url(img/products/1.png);">
-									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">Уровень 1 Влагоотводящий</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/2.png);">
-									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">
-									Уровень 1 Влагоотводящий
-								</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/5.png);">
-									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">
-									Аксессуары
-								</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/6.png);">
-									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">
-									Уровень 1 Влагоотводящий
-								</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/1.png);">
-									<img src="img/mask-product.png" class="img-fluid">
-								</div>
-								<span class="catalog__category">
-									Уровень 1 Влагоотводящий
-								</span>
-								<h3 class="products-slider__title">
-									Военная одежда название на 2 строчки
-								</h3>
-								<span class="products-slider__price">2 000 <span>₽</span></span>
-							</div>
-						</div>
-						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
-							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/2.png);">
-									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Аксессуары
@@ -391,8 +314,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item discount">
-								<div class="products-slider__preview" style="background-image: url(img/products/1.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/1.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">Уровень 1 Влагоотводящий</span>
 								<h3 class="products-slider__title">
@@ -403,8 +327,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/2.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/2.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Уровень 1 Влагоотводящий
@@ -417,8 +342,9 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/5.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/3.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Аксессуары
@@ -431,8 +357,97 @@
 						</div>
 						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
 							<div class="products-slider__item catalog__item">
-								<div class="products-slider__preview" style="background-image: url(img/products/6.png);">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/4.png);">
 									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">
+									Уровень 1 Влагоотводящий
+								</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/5.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">
+									Уровень 1 Влагоотводящий
+								</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/6.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">
+									Аксессуары
+								</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item discount">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/1.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">Уровень 1 Влагоотводящий</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/2.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">
+									Уровень 1 Влагоотводящий
+								</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/3.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
+								</div>
+								<span class="catalog__category">
+									Аксессуары
+								</span>
+								<h3 class="products-slider__title">
+									Военная одежда название на 2 строчки
+								</h3>
+								<span class="products-slider__price">2 000 <span>₽</span></span>
+							</div>
+						</div>
+						<div class="col-12 col-sm-6 col-md-4 col-lg-3">
+							<div class="products-slider__item catalog__item">
+								<div class="products-slider__preview catalog__img" style="background-image: url(img/products/4.png);">
+									<img src="img/mask-product.png" class="img-fluid">
+									<img src="img/news/1.jpg" class="catalog__img-h">
 								</div>
 								<span class="catalog__category">
 									Уровень 1 Влагоотводящий
