--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
 
 	<section class="functional">
 		<div class="container">
-			<img class="img-fluid functional__img" src="static/img/second_section.png" alt="">
-			<img class="img-fluid functional__img_m" src="static/img/second_section_m.png" alt="">
+			<div class="row justify-content-center">
+				<div class="col-7 col-sm-6 col-md-6 col-lg-8">
+					<img class="img-fluid functional__img" src="static/img/second_section.png" alt="">
+				</div>
+			</div>
+			<span class="functional__item functional__item_l functional__item_1">Низкоскоростное<br> гнездо</span>
+			<span class="functional__item functional__item_l functional__item_2">Планетарное <br> смешивание</span>
+			<span class="functional__item functional__item_l functional__item_3">Индукционный <br> нагрев до 180°</span>
+			<span class="functional__item functional__item_r functional__item_4">Высокоскоростное <br> гнездо</span>
+			<span class="functional__item functional__item_r functional__item_5">24 предустановленные <br> программы</span>
+			<span class="functional__item functional__item_r functional__item_6">Регулятор <span>скорости</span></span>
 		</div>
 	</section>
 
@@ -59,7 +68,7 @@
 							<div class="advantages-list__wrap advantages-list__wrap_f">
 								<span class="advantages-list__num">1.</span>
 								<div class="advantages-list__info">
-									<h3 class="advantages-list__title"><span>LCD</span> дисплей с установленными программами</h3>
+									<h3 class="advantages-list__title advantages-list__title_f"><span><span>LCD</span> дисплей с установленными программами</span></h3>
 									<p class="advantages-list__desc">
 										Показывает выбранные настройки и этапы <br> программ. В комплектации установлены 24 <br> программы для самых разных рецептов. 
 									</p>
@@ -86,10 +95,10 @@
 					<div class="col-12 col-lg-10">
 						<li class="advantages-list__item">
 							<img src="static/img/adv_3.png" alt="" class="advantages-list__img">
-							<div class="advantages-list__wrap">
+							<div class="advantages-list__wrap advantages-list__wrap_f">
 								<span class="advantages-list__num">3.</span>
 								<div class="advantages-list__info">
-									<h3 class="advantages-list__title">Индукционный нагрев</h3>
+									<h3 class="advantages-list__title"><span>Индукционный нагрев</span></h3>
 									<p class="advantages-list__desc">
 										Быстрый и равномерный нагрев до <br> 180° поможет справиться с самыми <br> сложными рецептами
 									</p>
@@ -116,10 +125,10 @@
 					<div class="col-12 col-lg-10">
 						<li class="advantages-list__item">
 							<img src="static/img/adv_5.png" alt="" class="advantages-list__img">
-							<div class="advantages-list__wrap">
+							<div class="advantages-list__wrap advantages-list__wrap_f">
 								<span class="advantages-list__num">5.</span>
 								<div class="advantages-list__info">
-									<h3 class="advantages-list__title">Функция помешивания </h3>
+									<h3 class="advantages-list__title"><span>Функция помешивания</span></h3>
 									<p class="advantages-list__desc">
 										Позволяет освободить время и успеть еще <br> больше
 									</p>
@@ -204,12 +213,12 @@
 					<div class="col-3">
 						<div class="slider-item">
 							<div class="slider-item__img">
-								<img class="img-fluid" src="static/img/product_2.jpg" alt="">
+								<img class="img-fluid" src="static/img/product_5.png" alt="">
 							</div>
 							<h4 class="slider-item__title">
-								Насадка для <br>
-								нарезки кубиками
-								<span>KAX400PL</span>
+								Насадка <br>
+								мороженница
+								<span>AT957A</span>
 							</h4>
 						</div>
 					</div>
@@ -217,11 +226,12 @@
 					<div class="col-3">
 						<div class="slider-item">
 							<div class="slider-item__img">
-								<img class="img-fluid" src="static/img/product_3.jpg" alt="">
+								<img class="img-fluid" src="static/img/product_6.png" alt="">
 							</div>
 							<h4 class="slider-item__title">
-								Кухонный комбайн 
-								<span>KAH647PL</span>
+								Насадка <br>
+								для пасты 
+								<span>KAX910</span>
 							</h4>
 						</div>
 					</div>
@@ -229,12 +239,12 @@
 					<div class="col-3">
 						<div class="slider-item">
 							<div class="slider-item__img">
-								<img class="img-fluid" src="static/img/product_2.jpg" alt="">
+								<img class="img-fluid" src="static/img/product_7.png" alt="">
 							</div>
 							<h4 class="slider-item__title">
-								Насадка для <br>
-								нарезки кубиками
-								<span>KAX400PL</span>
+								Насадка <br>
+								спиларайзер
+								<span>KAX700</span>
 							</h4>
 						</div>
 					</div>
