--- a/index.html
+++ b/index.html
@@ -248,6 +248,108 @@
 							</h4>
 						</div>
 					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_8.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка блендер
+								<span>KAH359Gl</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_9.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка <br>
+								мультиизмельчитель
+								<span>AT320A</span>
+							</h4>
+						</div>
+					</div>
+					
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_10.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка для <br>
+								раскатки пасты
+								<span>KAX980</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_11.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадки для <br>
+								нарезки пасты
+								<span>KAX981/2/3/4</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_12.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка шнековая <br>
+								соковыжималка
+								<span>KAH720</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_13.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка для смузи
+								<span>KAH740</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_14.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка <br>
+								терка-ломтерезка
+								<span>KAX643</span>
+							</h4>
+						</div>
+					</div>
+
+					<div class="col-3">
+						<div class="slider-item">
+							<div class="slider-item__img">
+								<img class="img-fluid" src="static/img/product_15.png" alt="">
+							</div>
+							<h4 class="slider-item__title">
+								Насадка пресс <br>
+								для цитрусовых
+								<span>AT312</span>
+							</h4>
+						</div>
+					</div>
 				</div>
 				
 			</div>
