--- a/index.html
+++ b/index.html
@@ -117,21 +117,104 @@
 	<section class="recommended container">
 		<h2 class="section-title">Рекомендованные товары</h2>
 		<div class="recommended-list">
+			<button class="recommended-list__arrow"><i class="fas fa-long-arrow-alt-left"></i></button>
 			<div id="recommendedSlider" class="recommended-list__slider">
 				<div class="recommended-list__item">
-					<img class="img-fluid" src="static/img/recommended/1.png">
-				</div>
-				<div class="recommended-list__item recommended-list__item_act">
-					<img class="img-fluid" src="static/img/recommended/2.png">
-				</div>
-				<div class="recommended-list__item">
-					<img class="img-fluid" src="static/img/recommended/3.png">
+					<div class="recommended-list__img">
+						<img class="img-fluid" src="static/img/recommended/1.png">
+					</div>
 				</div>
 				<div class="recommended-list__item">
-					<img class="img-fluid" src="static/img/recommended/4.png">
+					<div class="recommended-list__img">
+						<img class="img-fluid" src="static/img/recommended/2.png">
+					</div>
+				</div>
+				<div class="recommended-list__item">
+					<div class="recommended-list__img">
+						<img class="img-fluid" src="static/img/recommended/3.png">
+					</div>
+				</div>
+				<div class="recommended-list__item">
+					<div class="recommended-list__img recommended-list__item_act">
+						<img class="img-fluid" src="static/img/recommended/4.png">
+					</div>
 				</div>
 			</div>
-			
+		</div>
+
+		<div class="recommended-show">
+			<div class="recommended-show__item">
+				<div class="recommended-show__img">
+					<img class="img-fluid" src="static/img/recommended/prew.png">
+				</div>
+				<div class="recommended-show__info">
+					<h5 class="recommended-show__name">Тостер1 <span>CTI2103.CP</span></h5>
+					<div class="recommended-show__wrap">
+						<p class="recommended-show__desc">
+							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+						</p>
+						<div class="recommended-show__pay">
+							<span class="recommended-show__price">5 190 руб.</span>
+							<span class="recommended-show__bonus">30 бонусов</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="recommended-show__item">
+				<div class="recommended-show__img">
+					<img class="img-fluid" src="static/img/recommended/prew.png">
+				</div>
+				<div class="recommended-show__info">
+					<h5 class="recommended-show__name">Тостер2 <span>CTI2103.CP</span></h5>
+					<div class="recommended-show__wrap">
+						<p class="recommended-show__desc">
+							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+						</p>
+						<div class="recommended-show__pay">
+							<span class="recommended-show__price">5 190 руб.</span>
+							<span class="recommended-show__bonus">30 бонусов</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="recommended-show__item">
+				<div class="recommended-show__img">
+					<img class="img-fluid" src="static/img/recommended/prew.png">
+				</div>
+				<div class="recommended-show__info">
+					<h5 class="recommended-show__name">Тостер3 <span>CTI2103.CP</span></h5>
+					<div class="recommended-show__wrap">
+						<p class="recommended-show__desc">
+							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+						</p>
+						<div class="recommended-show__pay">
+							<span class="recommended-show__price">5 190 руб.</span>
+							<span class="recommended-show__bonus">30 бонусов</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="recommended-show__item">
+				<div class="recommended-show__img">
+					<img class="img-fluid" src="static/img/recommended/prew.png">
+				</div>
+				<div class="recommended-show__info">
+					<h5 class="recommended-show__name">Тостер4 <span>CTI2103.CP</span></h5>
+					<div class="recommended-show__wrap">
+						<p class="recommended-show__desc">
+							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+						</p>
+						<div class="recommended-show__pay">
+							<span class="recommended-show__price">5 190 руб.</span>
+							<span class="recommended-show__bonus">30 бонусов</span>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</section>
 <script src="static/js/jquery.min.js"></script>
