--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
 				<div class="offers__item">
 					<img src="static/img/offers/3.png" class="offers__img img-fluid">
+					<h4 class="offers__title">Онлайн курсы</h4>
 					<p class="offers__desc">
 						Спецпредложения оставляем. <br>
 						Нужно сделать визуальные 3 подблока: подарки за баллы, мероприятия, онлайн курсы с возможностью проскролить то что внутри этих блоков есть
@@ -117,7 +118,7 @@
 	<section class="recommended container">
 		<h2 class="section-title">Рекомендованные товары</h2>
 		<div class="recommended-list">
-			<button class="recommended-list__arrow"><i class="fas fa-long-arrow-alt-left"></i></button>
+			<!-- <button class="recommended-list__arrow"><i class="fas fa-long-arrow-alt-left"></i></button> -->
 			<div id="recommendedSlider" class="recommended-list__slider">
 				<div class="recommended-list__item">
 					<div class="recommended-list__img">
@@ -145,13 +146,13 @@
 		<div class="recommended-show">
 			<div class="recommended-show__item">
 				<div class="recommended-show__img">
-					<img class="img-fluid" src="static/img/recommended/prew.png">
+					<img src="static/img/recommended/prew.png">
 				</div>
 				<div class="recommended-show__info">
 					<h5 class="recommended-show__name">Тостер1 <span>CTI2103.CP</span></h5>
 					<div class="recommended-show__wrap">
 						<p class="recommended-show__desc">
-							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga facilis suscipit amet nisi laboriosam! Quidem consectetur cupiditate sed dolorem iusto.
 						</p>
 						<div class="recommended-show__pay">
 							<span class="recommended-show__price">5 190 руб.</span>
@@ -163,13 +164,13 @@
 
 			<div class="recommended-show__item">
 				<div class="recommended-show__img">
-					<img class="img-fluid" src="static/img/recommended/prew.png">
+					<img src="static/img/recommended/prew.png">
 				</div>
 				<div class="recommended-show__info">
 					<h5 class="recommended-show__name">Тостер2 <span>CTI2103.CP</span></h5>
 					<div class="recommended-show__wrap">
 						<p class="recommended-show__desc">
-							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam nulla nam debitis enim expedita libero, nobis excepturi qui. Excepturi itaque, esse nostrum nesciunt consequuntur distinctio. Ducimus ab architecto dolor laudantium!
 						</p>
 						<div class="recommended-show__pay">
 							<span class="recommended-show__price">5 190 руб.</span>
@@ -181,13 +182,13 @@
 
 			<div class="recommended-show__item">
 				<div class="recommended-show__img">
-					<img class="img-fluid" src="static/img/recommended/prew.png">
+					<img src="static/img/recommended/prew.png">
 				</div>
 				<div class="recommended-show__info">
 					<h5 class="recommended-show__name">Тостер3 <span>CTI2103.CP</span></h5>
 					<div class="recommended-show__wrap">
 						<p class="recommended-show__desc">
-							нужен для очистки вашей кофемашины или чайника, кофе идеально подойдет для приготовления кофе в кофемашины
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum officia minus quos tempora natus nulla laborum vel velit voluptates, suscipit neque ab eius maxime modi odio nisi atque cupiditate facere eligendi. Omnis, amet. Quisquam, atque dolorem dolores deleniti ducimus quae?
 						</p>
 						<div class="recommended-show__pay">
 							<span class="recommended-show__price">5 190 руб.</span>
@@ -199,7 +200,7 @@
 
 			<div class="recommended-show__item">
 				<div class="recommended-show__img">
-					<img class="img-fluid" src="static/img/recommended/prew.png">
+					<img src="static/img/recommended/prew.png">
 				</div>
 				<div class="recommended-show__info">
 					<h5 class="recommended-show__name">Тостер4 <span>CTI2103.CP</span></h5>
