--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</h1>
 		</div>
 		<nav class="main-nav container">
-			<a href="#" class="main-nav__link main-nav__link_act">
+			<a href="/" class="main-nav__link main-nav__link_act">
 				<svg version="1.1" class="nav-ico" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" 	y="0px"
 					 width="20" height="20" viewBox="0 0 460.298 460.297" style="enable-background:new 0 0 460.298 460.297;"
 					 xml:space="preserve">
@@ -82,7 +82,7 @@
 				</svg>
 				Главная
 			</a>
-			<a href="#" class="main-nav__link">
+			<a href="history.html" class="main-nav__link">
 				<svg class="nav-ico" width="18" height="18" viewBox="0 0 443 443" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path fill-rule="evenodd" clip-rule="evenodd" d="M443 221.5C443 343.831 343.831 443 221.5 443C99.1689 443 0 343.831 0 221.5C0 99.1689 99.1689 0 221.5 0C343.831 0 443 99.1689 443 221.5ZM215 29C215 26.7909 216.791 25 219 25H224C226.209 25 228 26.7909 228 29V218V223C228 225.209 226.209 227 224 227H219H67C64.7909 227 63 225.209 63 223V218C63 215.791 64.7909 214 67 214H215V29Z" fill="black"/>
 				</svg>
@@ -127,7 +127,7 @@
 				</svg>
 				Сертификаты гарантии
 			</a>
-			<a href="#" class="main-nav__link">
+			<a href="coupons.html" class="main-nav__link">
 			<svg version="1.1" class="nav-ico" style="transform: rotate(45deg);"  id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 				 width="26" height="25" viewBox="0 0 481.08 481.08" style="enable-background:new 0 0 481.08 481.08;"
 				 xml:space="preserve">
