--- a/index.html
+++ b/index.html
@@ -608,10 +608,10 @@
 						<span class="review-title"><span>Видео</span></span>
 						<div class="group">
 							<div class="video">
-								<img src="images/bg-57.png" alt="img">
+								<iframe width="100%" height="315" src="https://www.youtube.com/embed/JHdKu1bwbP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="video">
-								<img src="images/bg-57.png" alt="img">
+								<iframe width="100%" height="315" src="https://www.youtube.com/embed/JHdKu1bwbP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 					</div>
