--- a/index.html
+++ b/index.html
@@ -588,7 +588,8 @@
 						</div>
 					</div>
 				</div>
-				<div id="anchor3" class="container">
+				<div class="models-wrap">
+					<div id="anchor3" class="container">
 					<div class="models">
 						<h3>Модели и цены</h3>
 						<ul class="list-models">
@@ -650,6 +651,7 @@
 							
 						</ul>
 					</div>
+				</div>
 				</div>
 			</div>
 		</div>
