--- a/certificates.html
+++ b/certificates.html
@@ -120,8 +120,7 @@
 	                                Пожалуйста, укажите в форме запроса название или номер модели
 	                            </p>
 	                        </span>
-	                    </button> 
-	                </form>
+	                    </button>                 </form>
 	            </div>
 	            <div class="certificates-list">
 	                <div class="certificates-list__header certificates-item">
