--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@
 			</div>
 	
 			<div class="registration-stages__item registration-stages__item_act">
-				<i class="icon-serch"></i>
+				<i class="icon-man-user"></i>
 				<h5 class="registration-stages__title">Ваша информация</h5>
 			</div>
 	
